Parameterize gtzan dataset location

--- a/Audio Features.ipynb
+++ b/Audio Features.ipynb
@@ -369,6 +369,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# point this to the root of the Tzanetakis genre dataset\n",
+    "# http://marsyas.info/downloads/datasets.html\n",
+    "GTZAN_ROOT = 'genres/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def extract_mfccs(y, sr):\n",
     "    mfccs = librosa.feature.mfcc(y=y, sr=sr)\n",
     "    return np.concatenate([\n",
@@ -404,8 +415,8 @@
     "    y, sr = librosa.core.load(fname)\n",
     "    return extract_feats(y, sr)\n",
     "\n",
-    "def fname_generator(genre):\n",
-    "    for root, dirs, files in os.walk('genres/'):\n",
+    "def fname_generator(genre, gtzan_root=GTZAN_ROOT):\n",
+    "    for root, dirs, files in os.walk(gtzan_root):\n",
     "        for file in files:\n",
     "            if file.endswith('.wav') and genre in file:\n",
     "                yield os.path.join(root, file)         \n",
